# QBP

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  SPRINT_STATUS.md  TEAMS.md  TODO.md  claude_prompt_review.md  claude_review_prompt.md  document_review_prompt.md  force_sync_prompt.md  gemini_onboarding_prompt.md  gemini_review_prompt.md  initial_review_prompt.md  mlc_config.json  pyproject.toml  pytest.ini  requirements.txt  review_agents_prompt.md  setup_prompt.md  update_from_review_prompt.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  experiment.yml  feature.yml  research.yml  sprint_retrospective.yml  task.md
.github/PULL_REQUEST_TEMPLATE/: tier-1.md  tier-2.md  tier-3.md
.github/issues/: 001-visualization-framework.md  002-design-system.md
.github/workflows/: ci.yml  differential-test.yml  link-checker.yml  lint.yml  validate-json.yml
archive/: README.md
docs/: REVIEW_WORKFLOW.md  SESSION_LOG_2026-02-01.md  axiom_justifications.md  design-system-compare.html  design-system-preview.html  design-system.md  gemini_phase4_guide.md  lean4_setup.md  lean_library_strategy.md  multi_agent_git_coordination.md  process_violation_log.md  visualization.md
experiments/: __init__.py
knowledge/: README.md  index.yaml  qbp.db  qbp.hgdb
paper/: DESIGN_RATIONALE.md  LITERATURE_REVIEW.md  quaternion_physics.md
persona_foundation_documentation/: feynman_review.md  furey_review.md
proofs/: QBP.lean  README.md  lakefile.lean
research/: 01_stern_gerlach_expected_results.md  01b_angle_dependent_expected_results.md  01b_angle_dependent_proof_review.md  02_angle_dependent_expected_results.md  02_angle_test_expected_results.md  02_double_slit_expected_results.md  03_double_slit_expected_results.md  03_lamb_shift_expected_results.md  04_g-2_expected_results.md  05_bell_theorem_expected_results.md  06_particle_statistics_derivation.md  07_positronium_ground_state_expected_results.md  08_hydrogen_spectrum_expected_results.md  08_positronium_ground_state_expected_results.md  09_gravity_tests_expected_results.md  README.md  lean_game_engine_architecture.md
reviews/: .gitkeep  claude_review_PR115_2026-02-04.md  claude_review_PR11_2026-02-01.md  claude_review_PR12_2026-02-01.md  claude_review_PR130_2026-02-04.md  claude_review_PR13_2026-02-02.md  claude_review_PR14_2026-02-02.md  claude_review_PR15_session6_2026-02-02.md  claude_review_issue52_53_2026-02-03.md  gemini_review_PR100_2026-02-03.md  gemini_review_PR105_2026-02-03.md  gemini_review_PR107_2026-02-03.md  gemini_review_PR110_2026-02-03.md  gemini_review_PR111_2026-02-03.md  gemini_review_PR112_2026-02-03.md  gemini_review_PR112_v2_2026-02-03.md  gemini_review_PR115_2026-02-04.md  gemini_review_PR116_2026-02-04.md  gemini_review_PR11_2026-02-01.md  gemini_review_PR12_2026-02-01.md  gemini_review_PR130_2026-02-04.md  gemini_review_PR13_2026-02-01.md  gemini_review_PR15_2026-02-02.md  gemini_review_PR26_2026-02-02.md  gemini_review_PR27_2026-02-02.md  gemini_review_PR28_2026-02-02.md  gemini_review_PR75_2026-02-03.md  gemini_review_PR76_2026-02-03.md  gemini_review_PR79_2026-02-03.md  gemini_review_PR94_2026-02-03.md  gemini_review_PR99_2026-02-03.md  gemini_review_issue52_53_2026-02-03.md
scripts/: check_toolchain.py  differential_test.py  install-graphics-deps.sh  knowledge_hypergraph.py  migrate_to_sqlite.py  migrate_yaml_to_hypergraph.py  qbp_knowledge.py  qbp_knowledge_sqlite.py  requirements-knowledge.txt  research_gate.py  review_with_knowledge.py  scan_lean_proofs.py  seed_qbp_knowledge.py  validate_experiment_numbers.py  validate_knowledge.py
src/: __init__.py  qphysics.py
src/viz/interactive/: CMakeLists.txt  Makefile  README.md  export_data.py  shell.html
src/viz/interactive/data/: angle_dependent.viz.json  doubleslit.viz.json  experiment_01.json  proof_graph_01.json  stern_gerlach.viz.json
src/viz/interactive/src/: fonts.c  fonts.h  json_loader.c  json_loader.h  main.c  proof_graph.c  proof_graph.h  qphysics.c  qphysics.h  scene.h  theme.h
src/viz/interactive/src/scenes/: experiment_01_stern_gerlach.c  experiment_01b_angle_dependent.c  experiment_03_double_slit.c
tests/: __init__.py  conftest.py  oracle_predictions.json  test_differential.py  test_hif_roundtrip.py  test_output_schema.py  test_proof_viz_independence.py  test_si_conversion.py  test_si_defining_constants.py
(+175 files in other folders)
